tests/sksl/errors/InvalidInOutType.metal
### Compilation failed:

error: 1: unsupported compute shader in / out type
layout(set=0, binding=0) in int x;
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
error: 2: unsupported compute shader in / out type
layout(set=0, binding=1) out float4 y;
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
2 errors
